# anticipy

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PKG-INFO  PLOT_ARCHITECTURE_NOTES.md  README.md  asv.conf.json  pyproject.toml  requirements.txt  setup.py
anticipy/: __init__.py  app.py  forecast.py  forecast_models.py  forecast_plot.py  logging_utils.py  model_utils.py  utils_test.py
benchmarks/: benchmarks.py
docs/source/: conf.py
tests/: test_forecast.py  test_forecast_model.py  test_forecast_plot.py  test_model_utils.py
